petites corrections de la maquette, ajout de la grille visible

--- a/starter-template.css
+++ b/starter-template.css
@@ -7,11 +7,7 @@ body {
 }
 
 .coloredcol{
-  background-color: lightblue;
   border: 2px solid black;
-  border-radius: 6px;
-  line-height: 40px;
-  text-align: center;
 }
 
 .formulaire {
